compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalValsInClass.kt
class <!CONFLICTING_JVM_DECLARATIONS!>Aaa()<!> {
    val <!REDECLARATION!>a<!> = 1
    val <!REDECLARATION!>a<!> = 1
}